deployment/admin-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
spec:
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec:
      containers:
      - name: admin-api
        image: mateeyow/istiopoc-admin-api:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8888
          name: http
