deployment/auth-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: mateeyow/istiopoc-auth-api:v1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8889
          name: http
