deployment/admin-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api
spec:
  selector:
    app: admin-api
  ports:
  - port: 8888
    targetPort: 8888
    name: http
