deployment/auth-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth-api
  ports:
  - port: 8889
    targetPort: 8889
    name: http
