deployment/webv2-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-v2
spec:
  selector:
    app: web-v2
  ports:
  - port: 80
    targetPort: 80
    name: http
