deployment/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: web-istio.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /admin-api
        pathType: Prefix
        backend:
          service:
            name: admin-api
            port:
              number: 8888
